--- a/app/src/main/res/layout/activity_browse_login.xml
+++ b/app/src/main/res/layout/activity_browse_login.xml
@@ -1,114 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/mikey"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/mikey"
+    android:orientation="vertical"
     tools:context=".BrowseLogin">
 
   <ImageView
       android:id="@+id/browse"
-      android:layout_width="450dp"
-      android:layout_height="387dp"
-      android:layout_marginTop="32dp"
-      android:src="@drawable/browsefund"
-      app:layout_constraintCircle="@drawable/browsefund"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
-
-  <View
-      android:id="@+id/containerComponents"
-      style="@style/ContainerComponents"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.6"
-      app:layout_constraintStart_toStartOf="parent"
-      tools:layout_editor_absoluteY="266dp" />
-
-  <View
-      android:id="@+id/circle_center"
-      style="@style/ContainerComponents"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.6"
-      app:layout_constraintStart_toStartOf="parent"
-      tools:layout_editor_absoluteY="266dp" />
-
-  <EditText
-      android:id="@+id/edit_email"
-      style="@style/Edit_Text"
-      android:hint="Email"
-      android:drawableRight="@drawable/ic_email"
-      app:layout_constraintStart_toStartOf="@id/containerComponents"
-      app:layout_constraintEnd_toEndOf="@id/containerComponents"
-      app:layout_constraintTop_toTopOf="@id/containerComponents"
-
-      />
-
-  <EditText
-      android:id="@+id/edit_eye"
-      style="@style/Edit_Text"
-      android:hint="Senha"
-      android:drawableRight="@drawable/ic_eye"
-      app:layout_constraintStart_toStartOf="@id/containerComponents"
-      app:layout_constraintEnd_toEndOf="@id/containerComponents"
-      app:layout_constraintTop_toBottomOf="@id/edit_email"
-      />
-
-  <androidx.appcompat.widget.AppCompatButton
-      android:id="@+id/bt_entrar"
-      style="@style/Button"
-      android:text="@string/entrar"
-      android:textSize="18dp"
-      android:textStyle="bold"
-      android:textAllCaps="false"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/edit_eye"
-      />
-
-
-  <ProgressBar
-      android:id="@+id/progressbar"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="10dp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/containerComponents"
-      />
+      android:layout_height="300dp"
+      android:src="@drawable/browsefund" />
 
+
+  <androidx.coordinatorlayout.widget.CoordinatorLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="16dp"
+        android:elevation="8dp"
+        android:id="@+id/containerComponents"
+        style="@style/ContainerComponents"
+        android:layout_marginTop="180dp"
+      >
+
+      <androidx.appcompat.widget.LinearLayoutCompat
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/edit_email"
+            style="@style/Edit_Text"
+            android:drawableRight="@drawable/ic_email"
+            android:hint="Email" />
+
+        <EditText
+            android:id="@+id/edit_eye"
+            style="@style/Edit_Text"
+            android:drawableRight="@drawable/ic_eye"
+            android:hint="Senha" />
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bt_entrar"
+            style="@style/Button"
+            android:text="@string/entrar"
+            android:textAllCaps="false"
+            android:textSize="18dp"
+            android:textStyle="bold" />
+
+        <ProgressBar
+            android:id="@+id/progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:visibility="invisible" />
+
+      </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.cardview.widget.CardView>
+
+  </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+<androidx.cardview.widget.CardView
+    android:alpha="1.0"
+    app:cardCornerRadius="60dp"
+    android:layout_gravity="center"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
   <androidx.appcompat.widget.AppCompatButton
-      style="@style/barra_fund"
-      android:layout_marginTop="44dp"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/containerComponents"
-      />
-
-
-  <TextView
-      android:id="@+id/text_tela_cadastro"
+      android:layout_gravity="center"
+      android:id="@+id/appCompatButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/text_cadastro"
+      android:textColor="@color/orange"
       android:textSize="18sp"
       android:textStyle="bold"
-      android:textColor="@color/orange"
-      app:layout_constraintTop_toBottomOf="@id/progressbar"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
+      style="@style/barra_fund" />
 
-      />
+</androidx.cardview.widget.CardView>
 
 
-
-
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
