alterado o layout da janela de login .

--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@color/cinza"
+        android:startColor="@color/lemon"
         android:endColor="@color/smoke"
         android:angle="90"
         />
