--- a/app/src/main/res/layout/activity_browse_login.xml
+++ b/app/src/main/res/layout/activity_browse_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mikey"
+    android:background="@drawable/background"
     android:orientation="vertical"
     tools:context=".BrowseLogin">
 
@@ -112,8 +112,8 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/text_cadastro"
-      android:textColor="@color/orange"
-      android:textSize="18sp"
+      android:textColor="@color/black"
+      android:textSize="15dp"
       android:textStyle="bold"
       style="@style/barra_fund" />
 
