ajustada tela de chamada do site, cadatrar.

--- a/app/src/main/res/layout/activity_browse_login.xml
+++ b/app/src/main/res/layout/activity_browse_login.xml
@@ -73,6 +73,7 @@
         <EditText
             android:id="@+id/edit_eye"
             style="@style/Edit_Text"
+            android:inputType="textPassword"
             android:drawableRight="@drawable/ic_eye"
             android:hint="Senha" />
 
